--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -19,7 +21,7 @@
   }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
     min-width: 20rem;
     z-index: 1;
