--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,8 +10,13 @@
     position: fixed;
     right: 0;
     bottom: 0;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
     overflow: hidden;
-    z-index: -999;
+    z-index: -1;
     -webkit-filter: blur(7px) brightness(40%);
     -moz-filter: blur(7px) brightness(40%);
     -o-filter: blur(7px) brightness(40%);
