--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,19 +17,19 @@
     object-fit: cover;
     overflow: hidden;
     z-index: -1;
-    -webkit-filter: blur(7px) brightness(40%);
-    -moz-filter: blur(7px) brightness(40%);
-    -o-filter: blur(7px) brightness(40%);
-    -ms-filter: blur(7px) brightness(40%);
-    filter: blur(7px) brightness(40%);
-    transform: scale(1.1);
+    -webkit-filter: blur(8px) brightness(35%);
+    -moz-filter: blur(8px) brightness(35%);
+    -o-filter: blur(8px) brightness(35%);
+    -ms-filter: blur(8px) brightness(35%);
+    filter: blur(8px) brightness(35%);
+    transform: scale(1.15);
+    background-image: url('https://media.discordapp.net/attachments/1032819189288816690/1045893257462300713/bg_1_80.png?width=1426&height=1068');
   }
 
 body {
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
     min-width: 20rem;
-    z-index: 1;
 }
 
 .avatar {
