--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,6 +1,6 @@
 @media (max-width: 600px) {
 .avatar {
-    width: 14rem;
+    width: 13.5rem;
 }
 
 .container {
@@ -8,6 +8,11 @@
     text-align: center;
     margin: 1rem auto 0 auto;
     padding: 1rem 2rem;
+}
+
+h1 {
+  font-size: 1.6rem;
+  width: 95%;
 }
 
 .icon {
@@ -20,6 +25,6 @@ li {
 }
 
 a {
-  padding: 1.5rem;
+  padding: 1.25rem;
 }
 }
