--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,11 +17,11 @@
     object-fit: cover;
     overflow: hidden;
     z-index: -1;
-    -webkit-filter: blur(8px) brightness(35%);
-    -moz-filter: blur(8px) brightness(35%);
-    -o-filter: blur(8px) brightness(35%);
-    -ms-filter: blur(8px) brightness(35%);
-    filter: blur(8px) brightness(35%);
+    -webkit-filter: blur(8px) brightness(50%);
+    -moz-filter: blur(8px) brightness(50%);
+    -o-filter: blur(8px) brightness(50%);
+    -ms-filter: blur(8px) brightness(50%);
+    filter: blur(8px) brightness(50%);
     transform: scale(1.15);
     background-image: url('https://media.discordapp.net/attachments/1032819189288816690/1045893257462300713/bg_1_80.png?width=1426&height=1068');
   }
@@ -30,6 +30,7 @@ body {
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
     min-width: 20rem;
+    min-height: 100vh;
 }
 
 .avatar {
