--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -15,6 +15,10 @@ h1 {
   width: 95%;
 }
 
+.subtitle {
+  font-size: 0.8rem;
+}
+
 .icon {
   width: 2rem;
   height: 2rem;
@@ -24,7 +28,11 @@ li {
   padding: 0 0.25rem;
 }
 
-a {
+.list-link {
   padding: 1.25rem;
+}
+
+footer {
+  font-size: 0.7rem;
 }
 }
