--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,26 +6,6 @@
     box-sizing: border-box;
 }
 
-#rain {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    overflow: hidden;
-    z-index: -1;
-    -webkit-filter: blur(8px) brightness(50%);
-    -moz-filter: blur(8px) brightness(50%);
-    -o-filter: blur(8px) brightness(50%);
-    -ms-filter: blur(8px) brightness(50%);
-    filter: blur(8px) brightness(50%);
-    transform: scale(1.15);
-    background-image: url('https://media.discordapp.net/attachments/1032819189288816690/1045893257462300713/bg_1_80.png?width=1426&height=1068');
-  }
-
 body {
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
@@ -43,21 +23,24 @@ body {
     width: 19rem;
     text-align: center;
     margin: 1rem auto 0 auto;
-    padding: 1rem;
+    padding: 1rem 1rem 0 1rem;
 }
 
 h1 {
     color: #f5f5f5;
     font-size: 1.8rem;
-    margin-top: 1.5rem;
+}
+
+.subtitle, footer p {
+    color: #c0c0c0;
 }
 
 .subtitle {
-    color: #999;
+    font-size: 1rem;
 }
 
 ul {
-    margin-top: 2rem;
+    margin: 1rem 1rem 0 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -65,17 +48,16 @@ ul {
 
 li {
     list-style: none;
-    padding: 0 1.5rem;
 }
 
-a {
-    padding: 1rem;
+.list-link {
+    padding: 1.5rem 1.5rem 1rem 1.5rem;
     display: block;
     transition: 0.3s;
     opacity: 0.75;
 }
 
-a:hover {
+.list-link:hover {
     transform: scale(1.1);
     opacity: 1;
 }
@@ -91,18 +73,44 @@ span {
     transition: 0.3s;
 }
 
+.btn-portfolio {
+    padding: .5rem;
+    margin: .25rem auto;
+    display: flex;
+    background: rgba( 255, 255, 255, 0.1 );
+    backdrop-filter: blur( 1.5px );
+    -webkit-backdrop-filter: blur( 1.5px );
+    border-radius: 10px;
+    border: none;
+    transition: 0.3s;
+}
+
+.btn-portfolio:hover {
+    background: rgba(0, 0, 0, 0.1);
+}
+
+.port {
+    color: #f5f5f5;
+    font-size: 0.7rem;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.port:hover {
+    opacity: 0.6;
+}
+
 footer {
-    padding: -2.5rem 1rem 1rem 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-footer p {
-    color: #999;
+    width: 100%;
+    margin-top: 1rem;
     font-size: 0.8rem;
+    /*position: absolute;
+    bottom: 0;
+    height: 3rem;*/
 }
-
 
 /* title fade */
 .hide {
