--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,21 +9,24 @@
 body {
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
-    min-width: 20rem;
-    min-height: 100vh;
-}
-
-.avatar {
-    width: 15.5rem;
-    border-radius: 50%;
-    border: 4px solid transparent;
 }
 
 .container {
-    width: 19rem;
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    margin: 1rem auto 0 auto;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 1rem 0 1rem;
     padding: 1rem 1rem 0 1rem;
+    max-width: 100%;
+}
+
+.avatar {
+    display: flex;
+    max-width: 15.5rem;
+    border-radius: 50%;
+    border: 4px solid transparent;
 }
 
 h1 {
@@ -44,6 +47,8 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    max-width: 100%;
 }
 
 li {
