--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -7,7 +7,8 @@
     text-align: center;
     max-width: 320px;
     padding: 0 1.5rem;
-    margin: 0 auto;
+    margin: 1rem auto 0 auto;
+    padding: 1rem 1rem 0 1rem;
 }
 
 h1 {
@@ -20,8 +21,8 @@ h1 {
 }
 
 .icon {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.3rem;
+  height: 1.3rem;
 }
 
 li {
